# hashcat-legacy

./: .gitignore  .travis.yml  Makefile.am  Makefile.legacy  README.md  autogen.sh  configure.ac
charsets/: Makefile.am
docs/: BUILD.md  Makefile.am  changes.txt  contact.txt  credits.txt  user_manuals.txt
docs/examples/: A0.M0.word  A0.M10.word  A0.M100.hash  A0.M1000.hash  A0.M1400.word  A0.M1410.word  A0.M1600.hash  A0.M1700.hash  A0.M1700.word  A0.M1710.hash  A0.M1710.word  A0.M1720.hash  A0.M1731.hash  A0.M1731.word  A0.M1800.hash  A0.M500.hash  A0.M800.hash  A0.M800.word  A0.M900.hash  A1.M0.hash  A3.M0.word
examples/: A0.M0.hash  A0.M10.hash  A0.M100.word  A0.M1000.word  A0.M101.hash  A0.M101.word  A0.M1100.hash  A0.M1100.word  A0.M1400.hash  A0.M1410.hash  A0.M1420.hash  A0.M1420.word  A0.M1720.word  A0.M1800.word  A0.M200.hash  A0.M200.word  A0.M300.hash  A0.M300.word  A0.M400.hash  A0.M400.word  A0.M900.word  A1.M0.word  A3.M0.hash
include/: common.h  constants.h  engine.h  md5.h  rp.h  tsearch.h
masks/: Makefile.am
rules/: Incisive-leetspeak.rule  InsidePro-HashManager.rule  InsidePro-PasswordsPro.rule  Makefile.am  Ninja-leetspeak.rule  T0XlC-insert_00-99_1950-2050_toprules_0_F.rule  T0XlC-insert_space_and_special_0_F.rule  T0XlC-insert_top_100_passwords_1_G.rule  T0XlC.rule  T0XlCv1.rule  best64.rule  combinator.rule  d3ad0ne.rule  generated.rule  leetspeak.rule  oscommerce.rule  rockyou-30000.rule  specific.rule  toggles1.rule  toggles2.rule  toggles3.rule  toggles4.rule  toggles5.rule
salts/: Makefile.am  brute-oscommerce.salt
src/: Makefile  Makefile.am  Makefile.legacy  _sha512-sse2.c  bcrypt-raw.c  bcrypt-sse2.c  common.c  des-sse2.c  descrypt-sse2.c  engine.c  gost-sse2.c  hashcat-cli.c  keccak-sse2.c  md4-sse2.c  md5-sse2.c  rp.c  sha1-sse2.c  sha256-sse2.c  sha256.c  sha512-sse2.c  sha512.c  tsearch.c
tables/: Makefile.am  digits.table  keyboard.en_ar1.utf8.table  keyboard.en_ar2.utf8.table  leet.table  toggle_case.table  toggle_case_and_leet.table
tools/: Makefile.am  deps.sh  deps_i386.sh  generate-examples.pl  rules-debug.c  rules-stats-generate.pl  rules-stats-result-sort.pl  rules_debug  test.pl  test.rule
هتبس /www.facebook.com /: YuriFanBg
