combineddir = $(datadir)/@PACKAGE@/charsets/combined
combined_DATA = \
  combined/Bulgarian.hcchr \
  combined/Castilian.hcchr \
  combined/Catalan.hcchr \
  combined/English.hcchr \
  combined/French.hcchr \
  combined/German.hcchr \
  combined/Greek.hcchr \
  combined/GreekPolytonic.hcchr \
  combined/Italian.hcchr \
  combined/Lithuanian.hcchr \
  combined/Polish.hcchr \
  combined/Portuguese.hcchr \
  combined/Russian.hcchr \
  combined/Slovak.hcchr \
  combined/Spanish.hcchr

specialdir = $(datadir)/@PACKAGE@/charsets/special
special_DATA = \
  special/Russian/ru_cp1251-special.hcchr \
  special/Russian/ru_ISO-8859-5-special.hcchr \
  special/Catalan/ca_ISO-8859-1-special.hcchr \
  special/Catalan/ca_ISO-8859-15-special.hcchr \
  special/Catalan/ca_cp1252-special.hcchr \
  special/Slovak/sk_ISO-8859-2-special.hcchr \
  special/Slovak/sk_cp1250-special.hcchr \
  special/French/fr_ISO-8859-16-special.hcchr \
  special/French/fr_ISO-8859-15-special.hcchr \
  special/French/fr_cp1252-special.hcchr \
  special/French/fr_ISO-8859-1-special.hcchr \
  special/Polish/pl_cp1250-special.hcchr \
  special/Greek/el_cp1253-special.hcchr \
  special/Greek/el_ISO-8859-7-special.hcchr \
  special/Portuguese/pt_ISO-8859-1-special.hcchr \
  special/Portuguese/pt_cp1252-special.hcchr \
  special/Portuguese/pt_ISO-8859-15-special.hcchr \
  special/German/de_ISO-8859-1-special.hcchr \
  special/German/de_cp1252-special.hcchr \
  special/German/de_ISO-8859-15-special.hcchr \
  special/Castilian/es-ES_ISO-8859-15-special.hcchr \
  special/Castilian/es-ES_ISO-8859-1-special.hcchr \
  special/Castilian/es-ES_cp1252-special.hcchr \
  special/Italian/it_ISO-8859-15-special.hcchr \
  special/Italian/it_ISO-8859-1-special.hcchr \
  special/Italian/it_cp1252-special.hcchr \
  special/Spanish/es_ISO-8859-15-special.hcchr \
  special/Spanish/es_cp1252-special.hcchr \
  special/Spanish/es_ISO-8859-1-special.hcchr

standarddir = $(datadir)/@PACKAGE@/charsets/standard
standard_DATA = \
  standard/Russian/ru_KOI8-R.hcchr \
  standard/Russian/ru_ISO-8859-5.hcchr \
  standard/Russian/ru_cp1251.hcchr \
  standard/Catalan/ca_ISO-8859-15.hcchr \
  standard/Catalan/ca_cp1252.hcchr \
  standard/Catalan/ca_ISO-8859-1.hcchr \
  standard/Slovak/sk_ISO-8859-2.hcchr \
  standard/Slovak/sk_cp1250.hcchr \
  standard/Hungarian/hu_cp1250.hcchr \
  standard/French/fr_ISO-8859-16.hcchr \
  standard/French/fr_ISO-8859-1.hcchr \
  standard/French/fr_ISO-8859-15.hcchr \
  standard/French/fr_cp1252.hcchr \
  standard/English/en_ISO-8859-15.hcchr \
  standard/English/en_ISO-8859-1.hcchr \
  standard/English/en_cp1252.hcchr \
  standard/Polish/pl_ISO-8859-2.hcchr \
  standard/Polish/pl_cp1250.hcchr \
  standard/Greek/el_ISO-8859-7.hcchr \
  standard/Greek/el_cp1253.hcchr \
  standard/Portuguese/pt_ISO-8859-1.hcchr \
  standard/Portuguese/pt_cp1252.hcchr \
  standard/Portuguese/pt_ISO-8859-15.hcchr \
  standard/GreekPolytonic/el_polytonic_ISO-8859-7.hcchr \
  standard/GreekPolytonic/el_polytonic_cp1253.hcchr \
  standard/Lithuanian/lt_cp1257.hcchr \
  standard/Lithuanian/lt_ISO-8859-4.hcchr \
  standard/Lithuanian/lt_ISO-8859-13.hcchr \
  standard/German/de_ISO-8859-15.hcchr \
  standard/German/de_ISO-8859-1.hcchr \
  standard/German/de_cp1252.hcchr \
  standard/Castilian/es-ES_ISO-8859-15.hcchr \
  standard/Castilian/es-ES_ISO-8859-1.hcchr \
  standard/Castilian/es-ES_cp1252.hcchr \
  standard/Bulgarian/bg_KOI8-R.hcchr \
  standard/Bulgarian/bg_ISO-8859-5.hcchr \
  standard/Bulgarian/bg_cp1251.hcchr \
  standard/Italian/it_ISO-8859-1.hcchr \
  standard/Italian/it_ISO-8859-15.hcchr \
  standard/Italian/it_cp1252.hcchr \
  standard/Spanish/es_ISO-8859-1.hcchr \
  standard/Spanish/es_ISO-8859-15.hcchr \
  standard/Spanish/es_cp1252.hcchr
