docsdir = $(datadir)/doc/@PACKAGE@
docs_DATA = \
  BUILD.md \
  contact.txt \
  credits.txt \
  license.txt \
  rules.txt \
  changes.txt \
  user_manuals.txt

examplesdir = $(datadir)/doc/@PACKAGE@/examples
examples_DATA = \
  examples/A0.M0.hash \
  examples/A0.M0.word \
  examples/A0.M1000.hash \
  examples/A0.M1000.word \
  examples/A0.M100.hash \
  examples/A0.M100.word \
  examples/A0.M101.hash \
  examples/A0.M101.word \
  examples/A0.M10.hash \
  examples/A0.M10.word \
  examples/A0.M1100.hash \
  examples/A0.M1100.word \
  examples/A0.M1400.hash \
  examples/A0.M1400.word \
  examples/A0.M1410.hash \
  examples/A0.M1410.word \
  examples/A0.M1420.hash \
  examples/A0.M1420.word \
  examples/A0.M1600.hash \
  examples/A0.M1600.word \
  examples/A0.M1700.hash \
  examples/A0.M1700.word \
  examples/A0.M1710.hash \
  examples/A0.M1710.word \
  examples/A0.M1720.hash \
  examples/A0.M1720.word \
  examples/A0.M1731.hash \
  examples/A0.M1731.word \
  examples/A0.M1800.hash \
  examples/A0.M1800.word \
  examples/A0.M200.hash \
  examples/A0.M200.word \
  examples/A0.M300.hash \
  examples/A0.M300.word \
  examples/A0.M400.hash \
  examples/A0.M400.word \
  examples/A0.M500.hash \
  examples/A0.M500.word \
  examples/A0.M800.hash \
  examples/A0.M800.word \
  examples/A0.M900.hash \
  examples/A0.M900.word \
  examples/A1.M0.hash \
  examples/A1.M0.word \
  examples/A3.M0.hash \
  examples/A3.M0.word
