masksdir = $(datadir)/@PACKAGE@/masks
masks_DATA = \
  8char-1l-1u-1d-1s-compliant.hcmask \
  8char-1l-1u-1d-1s-noncompliant.hcmask \
  rockyou-1-60.hcmask \
  rockyou-2-1800.hcmask \
  rockyou-3-3600.hcmask \
  rockyou-4-43200.hcmask \
  rockyou-5-86400.hcmask \
  rockyou-6-864000.hcmask \
  rockyou-7-2592000.hcmask
