rulesdir = $(datadir)/@PACKAGE@/rules
rules_DATA = \
  best64.rule \
  combinator.rule \
  d3ad0ne.rule \
  dive.rule \
  generated.rule \
  Incisive-leetspeak.rule \
  InsidePro-HashManager.rule \
  InsidePro-PasswordsPro.rule \
  leetspeak.rule \
  unix-ninja-leetspeak.rule \
  oscommerce.rule \
  rockyou-30000.rule \
  specific.rule \
  T0XlC-insert_00-99_1950-2050_toprules_0_F.rule \
  T0XlC-insert_space_and_special_0_F.rule \
  T0XlC-insert_top_100_passwords_1_G.rule \
  T0XlC.rule \
  T0XlCv1.rule \
  toggles1.rule \
  toggles2.rule \
  toggles3.rule \
  toggles4.rule \
  toggles5.rule
